--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
+    "node": "^22.0.0",
     "nodemon": "^3.1.0"
   }
 }
