--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "node": "^22.0.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
